--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>+++ header</h1>
   <p>martin</p>
   <p>merge</p>
-  <h2>manirumva</h2>
+  <h2>manirumva martin</h2>
   <h1>luigi</h1>
 </body>
 </html>
