--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>+++ header</h1>
+  <h1>header</h1>
   <p>martin</p>
   <p>merge</p>
   <h2>manirumva martin</h2>
