--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
   <p>merge</p>
   <h2>manirumva martin</h2>
   <h1>luigi</h1>
+
+  <ul>
+    <li>item 1</li>
+    <li>item 2</li>
+  </ul>
 </body>
 </html>
