--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <li>item 2</li>
     <li>item 3</li>
     <li>item 4</li>
+    <li>item 5</li>
+    <li>item 6</li>
   </ul>
 </body>
 </html>
